Changed default css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,8 @@
 :root {
   font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: #030711;
 
   /* font-size: 1.2rem; */
   font-synthesis: none;
